apps/point-miner/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: point-miner-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: point-miner-tls
      hosts:
        - pointminer-test.picturo.us
  rules:
    - host: pointminer-test.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autohls
                port:
                  number: 5000
